--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "moduleResolution": "node",
     "paths": {
-      "@/*": [
+      "*": [
         "src/*"
       ]
     },
