--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,12 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "moduleResolution": "node",
     "paths": {
-      "*": [
-        "src/*"
-      ]
+      "@/*":["src/*"]
     },
     "lib": [
       "esnext",
